@@ -1,5 +1,10 @@
 2004-01-27  Philippe Elie  <phil.el@wanadoo.fr>
 
+	* libutil++/op_bfd.cpp: Fix bfd_find_nearest_line() and separate
+	  debug info, please test it.
+
+2004-01-27  Philippe Elie  <phil.el@wanadoo.fr>
+
 	* doc/opcontrol.1.in:
 	* doc/oprofile.xml:
 	* utils/opcontrol: add --cpu-buffer-size and document it.
